--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h1 {
     margin: 20px 0;
     font-size: 16px;
     color: black;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
 
 #character-count {
